force-app/main/default/objects/ExpectationConfiguration__mdt/ExpectationConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration data for creating expectation from different recommendation types</description>
    <label>Expectation Configuraiton</label>
    <pluralLabel>Expectation Configurations</pluralLabel>
</CustomObject>