force-app/main/default/objects/ExpectationConfiguration__mdt/fields/DateOffset__c.field-meta.xml
<CustomField>
    <fullName>DateOffset__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of days offset from today the expectation will be for</description>
    <label>Date Offset</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>