force-app/main/default/objects/ExpectationConfiguration__mdt/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Indicates whether the configured expectation represents money coming in (CONTRIBUTION) or going out (WITHDRAWL) of the financial product</description>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTRIBUTION</fullName>
                <default>true</default>
                <label>CONTRIBUTION</label>
            </value>
            <value>
                <fullName>WITHDRAWL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>