force-app/main/default/objects/ExpectationConfiguration__mdt/fields/IsRegular__c.field-meta.xml
<CustomField>
    <fullName>IsRegular__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this expectation configuration is for a regular recurring transaction or a one-off transaction</description>
    <label>Is Regular</label>
    <type>Checkbox</type>
</CustomField>