force-app/main/default/objects/ExpectationConfiguration__mdt/fields/RecommendationTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecommendationTypeDeveloperName__c</fullName>
    <description>The developer name of the recommendation type that this expectation configuration applies to</description>
    <label>Recommendation Type Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>