force-app/main/default/objects/ExpectationConfiguration__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Specifies whether the expectation applies to the source product, destination product, or both products in a transfer scenario</description>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Destination</fullName>
                <default>true</default>
                <label>Destination</label>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>