force-app/main/default/objects/ExpectationConfiguration__mdt/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>The type of transaction this expectation configuration applies to - regular recurring, lump sum, or tax relief transactions</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGULAR</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>LUMP_SUM</fullName>
                <label>Lump Sum</label>
            </value>
            <value>
                <fullName>TAX_RELIEF</fullName>
                <label>Tax Relief</label>
            </value>
            <value>
                <fullName>REBATE</fullName>
                <label>Rebate</label>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
                <label>Transfer</label>
            </value>
            <value>
                <fullName>IN_SPECIE</fullName>
                <label>In specie</label>
            </value>
            <value>
                <fullName>REDRESS</fullName>
                <label>Redress</label>
            </value>
            <value>
                <fullName>RESIDUAL</fullName>
                <label>Residual</label>
            </value>
            <value>
                <fullName>FEE</fullName>
                <label>Fee</label>
            </value>
            <value>
                <fullName>DIVIDEND</fullName>
            </value>
            <value>
                <fullName>INTEREST</fullName>
            </value>
            <value>
                <fullName>REFUND</fullName>
            </value>
            <value>
                <fullName>DIVIDEND_VCT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>